--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UI.MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".UI.SplashActivity"
+        <activity
+            android:name=".UI.LoginActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".UI.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UI.MainActivity"></activity>
     </application>
 
 </manifest>
