--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,3 +67,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'org.parceler:parceler:1.1.6'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
